2005-02-02 Raphael Neider <rneider AT web.de>

	* src/SDCCast.c (processParms): disabled W_NONRENT_ARGS for pic16 port
	* src/pic16/gen.c (aopForSym): reenabled special case for function pointers
	* (pic16_storeForReturn): fixed to allow returning function pointers
	* (genPackBits): improved accessing full bytes, implemented for GPOINTERs
	* device/include/pic16/{stddef.h,stdbool.h}: added

2004-02-02 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/mcs51/c8051f040.h: added define CPT2_PAGE

2005-02-01 Slade Rich <slade_rich AT users.sourceforge.net>

	* src/pic16/pic16.dsp : Added file graph.c to make it compile under windows
	* src/pic16/Makefile.bcc : Do not use this file but added file graph.c as it
	 appeared to be required

2004-01-31 Borut Razem <borut.razem AT siol.net>

	* support/scripts/sdcc.nsi: added include/asm/ds390, include/asm/mcs51,
	  include/mcs51 and include/z80 directories to the package

2004-01-26 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/hc08/gen.c (genFunction): fixed bug #1112752

2004-01-30 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/mcs51/peeph.def: adapted peephole 258.x to changed gen.c (genAnd)

2004-01-29 Frieder Ferlemann <Frieder.Ferlemann AT web.de>

	* src/mcs51/gen.c (genAnd): accessing LSB/MSB by rotating acc

2004-01-29 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/Makefile.in: create/copy mcs51 and z80 include subdirs

2004-01-27 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/include/c8051fxxx.h: removed these 6 files
	* device/include/mcs51/c8051fxxx.h: added these 11 new files

2005-01-26 Raphael Neider <rneider AT web.de>

	* src/pic16/gen.c (genAssign): fixed assignment from longs
	  in codespace (were cut to three bytes)
	* (genDummyRead): implemented (except for CODESPACE...),
	  fixed bug #1108575
	* src/pic16/glue.c (emitStatistics): beautified
	* device/lib/pic16/libm/Makefile: added include path
